--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.21",
+    "eslint": "^9.35.0",
     "genkit-cli": "^1.14.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
