--- a/package.json
+++ b/package.json
@@ -61,6 +61,9 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.35.0",
+    "eslint-config-next": "^15.5.3",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "genkit-cli": "^1.14.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
